Release Notes
=============

trunk
-----

* (r2966) Remove memory usage code from IceTray. Will be an external
  library using LD_PRELOAD in the future.
* (r2961) Put functionality for locating a scratch directory into the core.
* (r2952) Move the file logger from dataio-shovel to icetray.
* (r2924) Throw in python with a nice error message if deserialization fails.
* (r2921) Keep serialized frame object sizes around in a cached value.
* (r2920) Add a mode for I3FrameMixer to only track frame dependencies,
  without mixing.
* (r2901) Fill in the python bindings for I3Configuration.
* (r2878) No need for a TrashCan anymore.  If the user
  doesn't specify an outbox configuration one is added for them.
* (r2868) Don't require implementing Configure.
* (r2851) Add support for zstd compression.
* (r2836) Reduce frame mixing overhead by reusing cached frames.

March 23, 2017, Alex Olivas  (olivas@icecube.umd.edu)
-----------------------------------------------------
Release V17-03-00

* (r2810) Remove a deadlock in memory tracking.
* (r2808) Simulation 'S' frames become first class frames.
* (r2770) Conditional propagates from segments to modules.
* (r2739) portable_binary_archived moved to serialization. 
* (r2698) Remove OMKey::IsInIce and OMKey::IsIceTop.
* (r2605) Added memory tracking.
* (r2595) Uses serialization project.   
* (r2585) Expose I3Frame blob creation interface.
* (r2582) Added meta-project-diff.py script.
* Removed I3Deprecation and I3DSORegistry.


May 2, 2016, Alex Olivas  (olivas@icecube.umd.edu)
--------------------------------------------------
Release V16-04-01

* Update logging test scripts to account for different
  logging defaults in release and debug builds.

April 29, 2016, Alex Olivas  (olivas@icecube.umd.edu)
-----------------------------------------------------
Release V16-04-00

* OMKey knows about scintillators.
* Removed Backtrace, which I'm pretty sure isn't used.